--- a/estilos/style.css
+++ b/estilos/style.css
@@ -52,3 +52,12 @@ main {
     display: block;
     padding: 10px;
 }
+
+#login > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+#form > p {
+    font-size: 0.8em;
+}
