--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -31,13 +31,21 @@
     }
 
     #login > #imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     #login > #form {
-        float: right;
+        float: left;
         width: 50%;
+    }
+
+    #form > h1 {
+        font-size: 2em;
+    }
+
+    #form > p {
+        font-size: 1.2em;
     }
 }
