--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,12 +1,13 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 768px) and (max-width: 992px) { /* TABLETS */
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
 
     #login {
         width: 80vw;
+        height: 280px;
     }
 
     #login > #imagem {
@@ -22,12 +23,13 @@
 }
 
 @media screen and (min-width: 992px) {
-    body {
+    body { /* DESKTOPS */
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
 
     #login {
         width: 950px;
+        height: 350px;
     }
 
     #login > #imagem {
